# TreeSearch

./: CMakeLists.txt  FilesUtility.cpp  FilesUtility.h  ImagesUtility.cpp  dataset.csv  main.cpp
bowtry/: CMakeLists.txt  main [HSV].cpp  main0.cpp  main1.cpp  main2.cpp  main3 [GHT].cpp  main[GHT2].cpp  main[features].cpp
data/csv_dataset/: hist_dataset_test.csv
data/vocabulary/: bigvoc200.yml
include/: ClassifierUtility.h  DatasetUtility.h  Detector.h  FilesUtility.h  ImagesUtility.h  VocabularyUtility.h
src/: ClassifierUtility.cpp  DatasetUtility.cpp  Detector.cpp  FilesUtility.cpp  ImagesUtility.cpp  VocabularyUtility.cpp  main.cpp
src/mains/: ClassifierTesting.cpp  ClassifierTraining.cpp  TrainingSetCreation.cpp  TreeDetector.cpp  VocabularyCreation.cpp
